--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "doctrine/dbal": "^2.9",
+        "dusterio/lumen-passport": "^0.2.10",
         "laravel/lumen-framework": "5.8.*",
         "ramsey/uuid": "^3.8",
         "vlucas/phpdotenv": "^3.3"
